--- a/index.html
+++ b/index.html
@@ -3,25 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>13장 : div 3개 나란히</title>
-    <style>
-        body {display: flex;
-        flex-wrap: wrap;
-        }
-        #long { width: 100%;
-                height: 100px;
-                justify-content: center;
-                align-items: center;
-                background-color: gray;
-        }
-        div { background-color: yellow;
-              width: 33.33%;
-              height: 500px;
-        }
-        #odd {
-            background-color: blue;
-        }
-    </style>
-
+    <link rel="styleshhet" href="style.css" />
 </head>
 <body>
     <div id="long"> long  정가운데 정렬해야 하는데,,, </div>
