remote에 저장하기 위해 일단 저장

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>13장 : div 3개 나란히</title>
-    <link rel="styleshhet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div id="long"> long  정가운데 정렬해야 하는데,,, </div>
