--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div id="long"> long  정가운데 정렬해야 하는데,,, </div>
+    <header> header(제목) : position_absolute : z-index 조정으로 header 고정 나오게 : flex를 이용한 정가운데 정렬  </header>
     <div> 
         <h1>H1 : 제목 6단계</h1>
         <h2 style="color:rgb(0, 255, 76)"> H2</h2>
