--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>13장 : div 3개 나란히</title>
+    <title>비전공자를 위한 첫 코딩 챌린지</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header> 
-        <h2>header(제목) : position_absolute : z-index 조정으로 header 고정 나오게 : flex를 이용한 정가운데 정렬</H2>
+        <h2>header(비전공자를 위한 첫 코딩 챌린지) : z-index 조정으로 header 고정 나오게 : flex를 이용한 정가운데 정렬</H2>
     </header>
     <div> 
         <h3>99. 여기저기서</h3>
         <p> body:flex를 사용하여 아래쪽 div 정렬중 </p>
-        <p> header 고정, div를 relative header 높이</p>
+        <p> header 고정 <span class="sk_r">(fixed)</span>, div를 <span class="sk_r">relative</span> header 높이</p>
         <p> F12 : 박스 확인 : body의 margin 0로 변경</p>
-        <p> div:nth-child(2n+1)을 활용하여 백그라운드 색깔 지정</p>      
-        <p> div 용량 많으면 스크롤 생기게 overscroll:auto</p>
-        <p> 화면 사이즈에 따라 하단 div의 갯수가 달라짐 : 색깔 패턴도 달라져야 겠네</p>
+        <p> div:<span class="sk_r">nth-child(2n+1)</span>을 활용하여 백그라운드 색깔 지정</p>      
+        <p> div 용량 많으면 스크롤 생기게 <span class="sk_r">overflow</span>:scroll</p>
+        <p> 화면 사이즈<span class="sk_r">(@media)</span>에 따라 하단 div의 갯수가 달라짐 : 색깔 패턴도 달라져야 겠네 (nth-child 조정)</p>
         <p> style의 코멘트는 html과 다르다 : /* ... */  vs  < !-- ... --></p>
         <p> div에 마진 또는 패딩을 주니깐 div가 다음줄로 넘어가 버린다 : <span class="sk_r">이게뭐꼬</span></p>
     </div>
@@ -61,9 +61,16 @@
         <h3>05. HTML 특징 분석하기</h3>
         <p>태그 사이에 부모/자식 관계가 있다. (CSS 등 영향 미침)</p>
         <p>검색엔진은 텍스트를 좋아한다</p>
-        <p> SEO : Search Engine Optimization : 검색이 잘 되도록 설계 (메타/시맨틱태그 활용)</p>
+        <p>SEO : Search Engine Optimization : 검색이 잘 되도록 설계 (메타/시맨틱태그 활용)</p>
         <p>. 메타태그 : 검색 엔진에 정보를 제공할 목적의 태그</p> 
         <p>. 시맨틱태그 : 웹 페이지 구조를 구성하는 태그</p>    
+    </div>
+    <div> 
+        <h3>10. CSS 레이아웃 : 위치 지정</h3>
+        <p><span class="sk_b">static</span>(기본값)     position : static;</p>
+        <p><span class="sk_b">fixed</span> (웹브라우저 화면 상에서 고정)</p>
+        <p><span class="sk_b">relative</span> (자신의 기본 위치 기준 상대적인 위치)</p>
+        <p><span class="sk_b">absolute</span> : static이 아닌 가장 가까운 조상 기준 상대적 위치 (언제 사용하는지 모르겠음)</p>  
     </div>
     <div> 
         <h1>H1 : 제목 6단계</h1>
@@ -89,7 +96,8 @@
             </form>    
     </div>
     <div> 
-        <p> 4444 </p>
+        <h3>12. CSS 애니메이션 만들기</h3>
+        <p>정리 필요</p>
     </div>
 </body>
 </html>
