--- a/index.html
+++ b/index.html
@@ -11,19 +11,44 @@
     </header>
 
     <div> 
-        <h3>99. 여기저기서</h3>
+        <h3>99. 하다보니</h3>
         <p> body:flex를 사용하여 아래쪽 div 정렬중 </p>
         <p> header 고정 <span class="sk_r">(fixed)</span>, div를 <span class="sk_r">relative</span> header 높이</p>
         <p> z-index의 조정으로 div 스크롤시 밑으로 지나가도록 설정</p>
         <p> F12 : 박스 확인 : body의 margin 0로 변경</p>
         <p> div:<span class="sk_r">nth-child(2n+1)</span>을 활용하여 백그라운드 색깔 지정</p>      
-        <p> div 용량 많으면 스크롤 생기게 <span class="sk_r">overflow</span>:scroll</p>
+        <p> div 용량 많으면 스크롤 생기게 <span class="sk_r">overflow</span>:auto</p>
         <p> 화면 사이즈<span class="sk_r">(@media)</span>에 따라 하단 div의 갯수가 달라짐 : 색깔 패턴도 달라져야 겠네 (nth-child 조정)</p>
         <p> style의 코멘트는 html과 다르다 : /* ... */  vs  < !-- ... --></p>
         <p> div에 마진 또는 패딩을 주니깐 div가 다음줄로 넘어가 버린다 : <span class="sk_r">이게뭐꼬</span></p>
         <p> header도 flex하여 텍스트를 가운데 정렬 간단히 조정함</p>
     </div>
     
+    <div> 
+        <h3>99. 여기저기서</h3>
+        <p> <a href="https://developer.mozilla.org/ko/docs/Web/HTML">HTML정보 : MDN </a> </p>
+        https://developer.mozilla.org/ko/docs/Web/HTML
+        <br><br>
+
+        <p> <a href="https://www.w3schools.com/html/">W3School : html</a> </p>
+        <p> <a href="https://www.w3schools.com/css/">W3School : css</a> </p>
+        <p> <a href="https://www.w3schools.com/js/">W3School : java Acript</a> </p>
+        https://www.w3schools.com/html/
+        <br>
+
+
+    </div>
+
+    <div> 
+        <h3>12. CSS 애니메이션 만들기</h3>
+        <p>정리 필요</p>
+        <style>
+            .12tr { transition:500ms linear;}
+            .12tr:hover { background: green;}
+        </style>
+        <div class="12tr"></div>
+    </div>
+
     <div> 
         <h3>02. 웹, HTML이 뭐지</h3>
         <p>네트워크 : 컴퓨터와 컴퓨터를 연결해주는 망</p>
@@ -123,11 +148,6 @@
           <!-- 실제 코드 -->
           <br><button type="submit" value="submit">Submit</button>
         
-    </div>
-
-    <div> 
-        <h3>12. CSS 애니메이션 만들기</h3>
-        <p>정리 필요</p>
     </div>
 
     <div>
