--- a/animation.html
+++ b/animation.html
@@ -27,7 +27,7 @@
 
     <style>
         .trans2 {background-color: wheat; border-radius: 5px; transition: transform 1s ease-in-out;}
-        .trans2:hover { transition: rotate;}
+        .trans2:hover { transition: rotate(45deg);}
     </style>
     <div class="container">
         <div class="trans2">
