--- a/index.html
+++ b/index.html
@@ -41,12 +41,8 @@
 
     <div> 
         <h3>12. CSS 애니메이션 만들기</h3>
-        <p>정리 필요</p>
-        <style>
-            .12tr { transition:500ms linear;}
-            .12tr:hover { background: green;}
-        </style>
-        <div class="12tr"></div>
+        <p>정리 필요 : 아래 링크로</p>
+        <p> <a href="./animation.html">Animaion</a> </p>
     </div>
 
     <div> 
