--- a/animation.html
+++ b/animation.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>비전공자를 위한 첫 코딩 챌린지</title>
 </head>
+
 <body>
-    <header> 
+    <header>
         <h2>header( 비전공자를 위한 첫 코딩 챌린지 (12. Animation) )</H2>
     </header>
 
     <style>
-        div { width: 200px; height:200px; }
-        .container { border: 4px solid tomato; color:red;  }
+        div {
+            width: 200px;
+            height: 200px;
+        }
+
+        .container {
+            border: 4px solid tomato;
+            color: red;
+        }
+
+        .mymargin { margin: 50px;}
     </style>
 
     <style>
-        .transformd { transition-duration: 1s; transition-delay: 0.5s;}
-        .transformd:hover { background-color: bisque;}
+        .transformd {
+            transition-duration: 1s;
+            transition-delay: 0.5s;
+        }
+
+        .transformd:hover {
+            background-color: bisque;
+        }
     </style>
-    <div class="container">
+    <div class="container mymargin">
         <div class="transformd">
             hover color 1초동안변경, 0.5초지연
             transition-duration: 1s; transition-delay: 0.5s;
@@ -26,14 +43,78 @@
     </div>
 
     <style>
-        .trans2 {background-color: wheat; border-radius: 5px; transition: transform 1s ease-in-out;}
-        .trans2:hover { transition: rotate(45deg);}
+        .trans2 {
+            background-color: wheat;
+            border-radius: 5px;
+            transition: transform 1s ease-in-out;
+        }
+
+        .trans2:hover {
+            transform: rotate(45deg);
+        }
+
+        .trans2:active {
+            transform: scale(2);
+        }
     </style>
-    <div class="container">
+    <div class="container mymargin">
         <div class="trans2">
-            hover 45도 회전
-            transition: rotate(45deg)
+            transform:
+            <br>hover 45도 회전 rotate(45deg)
+            <br>active 2배 확대 scale(2)
         </div>
     </div>
 
+    <style>
+        .trans3 {
+            background-color: yellowgreen;
+            border-radius: 5px;
+            transition: transform 1s ease-in-out;
+        }
+
+        .trans3:hover {
+            transform: skew(15deg);
+        }
+
+        .trans3:active {
+            transform: translate(50px);
+        }
+    </style>
+    <div class="container mymargin">
+        <div class="trans3">
+            transform:
+            <br>hover 45도 회전 skew(15deg)
+            <br>active 50픽셀 이동 trranslate(50px)
+        </div>
+    </div>
+
+    <style>
+        .trans4 {
+            background-color: rgb(90, 204, 110);
+            border-radius: 5px;
+            transition: transform 1s ease-in-out;
+        }
+
+        .trans4:hover {
+            transform: scale(0.5) translate(-50px,50px);
+        }
+    </style>
+    <div class="container mymargin">
+        <div class="trans4">
+            transform: 동시 가능, 스페이스로
+            <br>hover 
+            <br>scale(0.5) translate(-50px,50px)
+        </div>
+    </div>
+
+    <style>
+        @keyframes mymove {
+            0% { transform : rotate(90deg);}
+            25% { transform : rotate(180deg);}
+            50% { transform : rotate(270deg);}
+            75% { transform : rotate(360deg);}
+        }
+    </style>
+
+    <div class="container mymargin" style="animation: mymove 3s infinite"></div>
 </body>
