--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
     </div>
 
     <div> 
+        <h3>BOOK</h3>
+        <p> <a href=".book/book_0003.html">성취심리</a> </p>
+        <p> <a href=".book/book_0002.html">메모의 기술</a> </p>
+        <p> <a href=".book/book_0001.html">칭찬은 고래를 춤추게 한다</a> </p>
+    </div>
+
+    <div> 
         <h3>02. 웹, HTML이 뭐지</h3>
         <p>네트워크 : 컴퓨터와 컴퓨터를 연결해주는 망</p>
         <p>인터넷 : 이런 망들이 모여 더 큰 네트워크   (시초 : 미국 국방부 산하 고등연구국 ARPANET)</p>
