--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
     <div> 
         <h3>BOOK</h3>
-        <p> <a href=".book/book_0003.html">성취심리</a> </p>
-        <p> <a href=".book/book_0002.html">메모의 기술</a> </p>
-        <p> <a href=".book/book_0001.html">칭찬은 고래를 춤추게 한다</a> </p>
+        <p> <a href="./book/book_0003.html">성취심리</a> </p>
+        <p> <a href="./book/book_0002.html">메모의 기술</a> </p>
+        <p> <a href="./book/book_0001.html">칭찬은 고래를 춤추게 한다</a> </p>
     </div>
 
     <div> 
