--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
 
     <div> 
         <h3>BOOK</h3>
-        <p> W 22.04.28 </p>
+        <p> W 22.05.02 </p>
+        <p> <a href="./book/book_0010.html">육아는 과학이다</a> </p>
+        <p> <a href="./book/book_0009.html">이코노미스트 2010 세계경제전망</a> </p>
+        <p> <a href="./book/book_0008.html">세계에서 빈곤을 없애는 30가지 방법</a> </p>
+        <p> <a href="./book/book_0007.html">경제성장이 안되면 우리는 풍요롭지 못할 것인가</a> </p>
+        <p> <a href="./book/book_0006.html">망각의 힘</a> </p>
+        <p> <a href="./book/book_0005.html">실용주의 프로그래머</a> </p>
         <p> <a href="./book/book_0004.html">커피와 샌드위치</a> </p>
         <p> <a href="./book/book_0003.html">성취심리</a> </p>
         <p> <a href="./book/book_0002.html">메모의 기술</a> </p>
