블로그이동중 05.11 책17

--- a/index.html
+++ b/index.html
@@ -47,7 +47,24 @@
 
     <div> 
         <h3>BOOK</h3>
-        <p> W 22.05.02 </p>
+        <p> W 05.11 책17</p>
+        <p> <a href="./book/book_0027.html">욱하는 성질 죽이기</a> </p>
+        <p> <a href="./book/book_0026.html">백곰 심리학</a> </p>
+        <p> <a href="./book/book_0025.html">치유의 인문학</a> </p>
+        <p> <a href="./book/book_0024.html">고함쟁이 엄마</a> </p>
+        <p> <a href="./book/book_0023.html">괴짜처럼 생각하라</a> </p>
+        <p> <a href="./book/book_0022.html">사람을 읽는 힘 DiSC</a> </p>
+        <p> <a href="./book/book_0021.html">위대한 개츠비</a> </p>
+        <p> <a href="./book/book_0020.html">When the Future Belongs</a> </p>
+        <p> <a href="./book/book_0019.html">가족의 두 얼굴</a> </p>
+        <p> <a href="./book/book_0018.html">평사원 리더</a> </p>
+        <p> <a href="./book/book_0017.html">빚더미가 몰려온다</a> </p>
+        <p> <a href="./book/book_0016.html">불황10년</a> </p>
+        <p> <a href="./book/book_0015.html">신뢰의 속도</a> </p>
+        <p> <a href="./book/book_0014.html">동물농장</a> </p>
+        <p> <a href="./book/book_0013.html">목표관리&실행</a> </p>
+        <p> <a href="./book/book_0012.html">경영학 콘서트</a> </p>
+        <p> <a href="./book/book_0011.html">일본을 통해본 부동산 10년 대폭락 시나리오</a> </p>
         <p> <a href="./book/book_0010.html">육아는 과학이다</a> </p>
         <p> <a href="./book/book_0009.html">이코노미스트 2010 세계경제전망</a> </p>
         <p> <a href="./book/book_0008.html">세계에서 빈곤을 없애는 30가지 방법</a> </p>
