--- a/index.html
+++ b/index.html
@@ -47,34 +47,37 @@
 
     <div> 
         <h3>BOOK</h3>
-        <p> W 05.11 책17</p>
-        <p> <a href="./book/book_0027.html">욱하는 성질 죽이기</a> </p>
-        <p> <a href="./book/book_0026.html">백곰 심리학</a> </p>
-        <p> <a href="./book/book_0025.html">치유의 인문학</a> </p>
-        <p> <a href="./book/book_0024.html">고함쟁이 엄마</a> </p>
-        <p> <a href="./book/book_0023.html">괴짜처럼 생각하라</a> </p>
-        <p> <a href="./book/book_0022.html">사람을 읽는 힘 DiSC</a> </p>
-        <p> <a href="./book/book_0021.html">위대한 개츠비</a> </p>
-        <p> <a href="./book/book_0020.html">When the Future Belongs</a> </p>
-        <p> <a href="./book/book_0019.html">가족의 두 얼굴</a> </p>
-        <p> <a href="./book/book_0018.html">평사원 리더</a> </p>
-        <p> <a href="./book/book_0017.html">빚더미가 몰려온다</a> </p>
-        <p> <a href="./book/book_0016.html">불황10년</a> </p>
-        <p> <a href="./book/book_0015.html">신뢰의 속도</a> </p>
-        <p> <a href="./book/book_0014.html">동물농장</a> </p>
-        <p> <a href="./book/book_0013.html">목표관리&실행</a> </p>
-        <p> <a href="./book/book_0012.html">경영학 콘서트</a> </p>
-        <p> <a href="./book/book_0011.html">일본을 통해본 부동산 10년 대폭락 시나리오</a> </p>
-        <p> <a href="./book/book_0010.html">육아는 과학이다</a> </p>
-        <p> <a href="./book/book_0009.html">이코노미스트 2010 세계경제전망</a> </p>
-        <p> <a href="./book/book_0008.html">세계에서 빈곤을 없애는 30가지 방법</a> </p>
-        <p> <a href="./book/book_0007.html">경제성장이 안되면 우리는 풍요롭지 못할 것인가</a> </p>
-        <p> <a href="./book/book_0006.html">망각의 힘</a> </p>
-        <p> <a href="./book/book_0005.html">실용주의 프로그래머</a> </p>
-        <p> <a href="./book/book_0004.html">커피와 샌드위치</a> </p>
-        <p> <a href="./book/book_0003.html">성취심리</a> </p>
-        <p> <a href="./book/book_0002.html">메모의 기술</a> </p>
-        <p> <a href="./book/book_0001.html">칭찬은 고래를 춤추게 한다</a> </p>
+        <p> W 05.16 책27</p>
+        <p> <a href="./book/book_0030.html">030. 지적 대화를 위한 넓고 얕은 지식</a> </p>
+        <p> <a href="./book/book_0029.html">029. 데이터가 보인다</a> </p>
+        <p> <a href="./book/book_0028.html">028. 와우프로젝트</a> </p>
+        <p> <a href="./book/book_0027.html">027. 욱하는 성질 죽이기</a> </p>
+        <p> <a href="./book/book_0026.html">026. 백곰 심리학</a> </p>
+        <p> <a href="./book/book_0025.html">025. 치유의 인문학</a> </p>
+        <p> <a href="./book/book_0024.html">024. 고함쟁이 엄마</a> </p>
+        <p> <a href="./book/book_0023.html">023. 괴짜처럼 생각하라</a> </p>
+        <p> <a href="./book/book_0022.html">022. 사람을 읽는 힘 DiSC</a> </p>
+        <p> <a href="./book/book_0021.html">021. 위대한 개츠비</a> </p>
+        <p> <a href="./book/book_0020.html">020. When the Future Belongs</a> </p>
+        <p> <a href="./book/book_0019.html">019. 가족의 두 얼굴</a> </p>
+        <p> <a href="./book/book_0018.html">018. 평사원 리더</a> </p>
+        <p> <a href="./book/book_0017.html">017. 빚더미가 몰려온다</a> </p>
+        <p> <a href="./book/book_0016.html">016. 불황10년</a> </p>
+        <p> <a href="./book/book_0015.html">015. 신뢰의 속도</a> </p>
+        <p> <a href="./book/book_0014.html">014. 동물농장</a> </p>
+        <p> <a href="./book/book_0013.html">013. 목표관리&실행</a> </p>
+        <p> <a href="./book/book_0012.html">012. 경영학 콘서트</a> </p>
+        <p> <a href="./book/book_0011.html">011. 일본을 통해본 부동산 10년 대폭락 시나리오</a> </p>
+        <p> <a href="./book/book_0010.html">010. 육아는 과학이다</a> </p>
+        <p> <a href="./book/book_0009.html">009. 이코노미스트 2010 세계경제전망</a> </p>
+        <p> <a href="./book/book_0008.html">008. 세계에서 빈곤을 없애는 30가지 방법</a> </p>
+        <p> <a href="./book/book_0007.html">007. 경제성장이 안되면 우리는 풍요롭지 못할 것인가</a> </p>
+        <p> <a href="./book/book_0006.html">006. 망각의 힘</a> </p>
+        <p> <a href="./book/book_0005.html">005. 실용주의 프로그래머</a> </p>
+        <p> <a href="./book/book_0004.html">004. 커피와 샌드위치</a> </p>
+        <p> <a href="./book/book_0003.html">003. 성취심리</a> </p>
+        <p> <a href="./book/book_0002.html">002. 메모의 기술</a> </p>
+        <p> <a href="./book/book_0001.html">001. 칭찬은 고래를 춤추게 한다</a> </p>
     </div>
 
     <div> 
