--- a/index.html
+++ b/index.html
@@ -47,7 +47,20 @@
 
     <div> 
         <h3>BOOK</h3>
-        <p> W 05.16 책27</p>
+        <p> W 05.17 책XX(31~YY)</p>
+        <p> <a href="./book/book_0043.html">043. 데이터과학과 알고리즘</a> </p>
+        <p> <a href="./book/book_0042.html">042. 통계적으로 생각하기</a> </p>
+        <p> <a href="./book/book_0041.html">041. 나도 노벨상이 타고 싶다</a> </p>
+        <p> <a href="./book/book_0040.html">040. 저녁까지만 거짓말하기로 한 날</a> </p>
+        <p> <a href="./book/book_0039.html">039. 세상에서 가장 슬픈 여행자, 난민</a> </p>
+        <p> <a href="./book/book_0038.html">038. 포기하지마</a> </p>
+        <p> <a href="./book/book_0037.html">037. 꽃할배</a> </p>
+        <p> <a href="./book/book_0036.html">036. 굿바이 내비</a> </p>
+        <p> <a href="./book/book_0035.html">035. 우동한그릇</a> </p>
+        <p> <a href="./book/book_0034.html">034. 한국인은 미쳤다</a> </p>
+        <p> <a href="./book/book_0033.html">033. 느려도 좋아, 달라도 좋아</a> </p>
+        <p> <a href="./book/book_0032.html">032. 빅데이터를 지배하는 통계의 힘</a> </p>
+        <p> <a href="./book/book_0031.html">031. 당신이 있어 행복합니다</a> </p>
         <p> <a href="./book/book_0030.html">030. 지적 대화를 위한 넓고 얕은 지식</a> </p>
         <p> <a href="./book/book_0029.html">029. 데이터가 보인다</a> </p>
         <p> <a href="./book/book_0028.html">028. 와우프로젝트</a> </p>
