--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
 
     <div> 
         <h3>BOOK</h3>
-        <p> W 05.30 책10(57~66)</p>
+        <p> W 06.01 책12(67~78)</p>
+        <p> <a href="./book/book_0078.html">078. 자전거 못 타는 아이</a> </p>
+        <p> <a href="./book/book_0077.html">077. 얼굴 빨개지는 아이</a> </p>
+        <p> <a href="./book/book_0076.html">076. 타나토노트 2</a> </p>
+        <p> <a href="./book/book_0075.html">075. 타나토노트 1</a> </p>
+        <p> <a href="./book/book_0074.html">074. 가난의 힘</a> </p>
+        <p> <a href="./book/book_0073.html">073. 중학교과서 고전읽기 1/2</a> </p>
+        <p> <a href="./book/book_0072.html">072. 중학교과서 고전읽기 2/2</a> </p>
+        <p> <a href="./book/book_0071.html">071. 국어시간에 수필 읽기 3</a> </p>
+        <p> <a href="./book/book_0070.html">070. 보수주의자의 양심</a> </p>
+        <p> <a href="./book/book_0069.html">069. 나는 왜 네가 힘들까 괜찮아</a> </p>
+        <p> <a href="./book/book_0068.html">068. 미움받아도 괜찮아 ###</a> </p>
+        <p> <a href="./book/book_0067.html">067. 인공지능에 도덕엔진을 탑재하는 법</a> </p>
         <p> <a href="./book/book_0066.html">066. 독도고래</a> </p>
         <p> <a href="./book/book_0065.html">065. 질문이 있는 식탁 유대인 교육의 비밀</a> </p>
         <p> <a href="./book/book_0064.html">064. 국어 시간에 수필 읽기 2</a> </p>
