--- a/index.html
+++ b/index.html
@@ -47,7 +47,28 @@
 
     <div> 
         <h3>BOOK</h3>
-        <p> W 06.01 책12(67~78)</p>
+        <p> W 06.03 책21(79~99)</p>
+        <p> <a href="./book/book_0099.html">099. 슬로리딩</a> </p>
+        <p> <a href="./book/book_0098.html">098. 주머니 속의 가을</a> </p>
+        <p> <a href="./book/book_0097.html">097. 잘했어요 노트 ###</a> </p>
+        <p> <a href="./book/book_0096.html">096. 그림 그리는 새</a> </p>
+        <p> <a href="./book/book_0095.html">095. 자존감의 여섯 기둥</a> </p>
+        <p> <a href="./book/book_0094.html">094. 논어, 직장인의 미래를 논하다</a> </p>
+        <p> <a href="./book/book_0093.html">093. 내 여자의 열매</a> </p>
+        <p> <a href="./book/book_0092.html">092. 나는 프로그래머다 2</a> </p>
+        <p> <a href="./book/book_0091.html">091. 나는 프로그래머다</a> </p>
+        <p> <a href="./book/book_0090.html">090. 내가 사랑한 책</a> </p>
+        <p> <a href="./book/book_0089.html">089. 책등에 베이다</a> </p>
+        <p> <a href="./book/book_0088.html">088. 뇌, 인간을 읽다</a> </p>
+        <p> <a href="./book/book_0087.html">087. 같은 말도 듣기 좋게</a> </p>
+        <p> <a href="./book/book_0086.html">086. 그렇게 물어보면 원하는 답을 들을 수 없습니다</a> </p>
+        <p> <a href="./book/book_0085.html">085. 공자, 최후의 20년</a> </p>
+        <p> <a href="./book/book_0084.html">084. 낭송 사자소학</a> </p>
+        <p> <a href="./book/book_0083.html">083. 아빠의 인성교육</a> </p>
+        <p> <a href="./book/book_0082.html">082. 소리치지 않고 때리지 않고 ###</a> </p>
+        <p> <a href="./book/book_0081.html">081. 생각에 관한 생각 - 2. 휴리스틱과 편향 (‘Heuristics and Biases)</a> </p>
+        <p> <a href="./book/book_0080.html">080. 생각에 관한 생각 - 1.두 가지 시스템</a> </p>
+        <p> <a href="./book/book_0079.html">079. 블랙리스트</a> </p>
         <p> <a href="./book/book_0078.html">078. 자전거 못 타는 아이</a> </p>
         <p> <a href="./book/book_0077.html">077. 얼굴 빨개지는 아이</a> </p>
         <p> <a href="./book/book_0076.html">076. 타나토노트 2</a> </p>
