--- a/book/book_0099.html
+++ b/book/book_0099.html
@@ -66,6 +66,8 @@
     <p data-ke-size="size16"><span style="color: #333333;">추천 ★★☆, 다시 ★★★</span></p>
     <p data-ke-size="size16">지은이: 하시모토 다케시,&nbsp; 옮긴이: 장민주,&nbsp; 출판사: 조선Books,&nbsp; 출판년도: 2012,&nbsp;</p>
     <p data-ke-size="size16">&nbsp;</p>
-    <p data-ke-size="size16"><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788966660339&amp;orderClick=LEA&amp;Kc=" target="_blank" rel="noopener"><img src="./book_0099.jpg" alt="책_슬로리딩" ></a></p>
+    
+    <p data-ke-size="size16"><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9788966660339&amp;orderClick=LEA&amp;Kc=" target="_blank" rel="noopener">
+        <img src="./book_0099.jpg" alt="책이미지 : 슬로리딩" ></a></p>
 
 </body>
