--- a/book/book_0114.html
+++ b/book/book_0114.html
@@ -23,14 +23,14 @@
     <p data-ke-size="size16">035&nbsp; 인간의 동물성을 부정할 수는 없습니다. 다만 그것을 넘어서려는 의지를 가질 때 우리는 인간적일 수 있습니다.</p>
     <p data-ke-size="size16">&nbsp;</p>
     <h4 data-ke-size="size20"><b><span style="color: #006dd7;">2. 현대인을 이해하는 세가지 화두 : 몸, 돈, 사랑 (고미숙)</span></b></h4>
-    <p data-ke-size="size16">038&nbsp; 왜 돈을 벌고 싶으냐고 물으면 대부분의 사람들이 놀고먹기 위해서라고 합합니다</p>
+    <p data-ke-size="size16">038&nbsp; 왜 돈을 벌고 싶으냐고 물으면 대부분의 사람들이 놀고먹기 위해서라고 합니다</p>
     <p data-ke-size="size16">040&nbsp; 살아간다는 것은 생명을 가진 존재라는 뜻입니다. 생명을 가진 것의 증거, 토대, 현장은 몸이며, 이 몸이 있기에 우리는 생로병사를 경험합니다</p>
     <p data-ke-size="size16">041&nbsp; 어떤 사람도 답은 없는데 모두에게 답이 열려있는 것, 그게 바로 디지털혁명</p>
-    <p data-ke-size="size16">042&nbsp; 우리 안에 있는 타자 (꿈: 내가 꾸지만, 인위적으로 조작 불가,&nbsp; 목소리:내가 듣는 소리, 타인에게 전달하는 소라가 다름)</p>
-    <p data-ke-size="size16">044&nbsp; 현대인의 질병 : 자의식 과잉에서 비롯, 자의식을 쉽게 말해 인정 욕망이면서 동시에 자신에 대한 의식으로 하루 좃일 타인이 나를 어떻게 보는지를 생각하고 그것이 내 안의 척도가 되는 것</p>
+    <p data-ke-size="size16">042&nbsp; 우리 안에 있는 타자 (꿈: 내가 꾸지만, 인위적으로 조작 불가,  목소리:내가 듣는 소리, 타인에게 전달하는 소라가 다름)</p>
+    <p data-ke-size="size16">044&nbsp; 현대인의 질병 : 자의식 과잉에서 비롯, 자의식을 쉽게 말해 인정 욕망이면서 동시에 자신에 대한 의식으로 하루 종일 타인이 나를 어떻게 보는지를 생각하고 그것이 내 안의 척도가 되는 것</p>
     <p data-ke-size="size16">045&nbsp; 능력이 있으면 있는대로, 없으면 없는 대로 살면 되는데 외부의 기준에 자신을 맞추다 보니 그렇게 살지 못한다</p>
     <p data-ke-size="size16">045&nbsp; 욕망과 능력에 간극이 생길 때 우리 몸은 강도 높은 스트레스를 받게 되고, 이는 모든 질병과 번뇌의 원천이 됩니다</p>
     <p data-ke-size="size16">047&nbsp; 매일 밤 숙면을 취하는 것은 뛰어난 능력입니다</p>
-    <p data-ke-size="size16">047&nbsp; 호흡이 빨라지련는 순간 의도적으로 브레이크를 걸어야 합니다. 그것이 바로 휴식입니다.&nbsp;</p>
+    <p data-ke-size="size16">047&nbsp; 호흡이 빨라지려는 순간 의도적으로 브레이크를 걸어야 합니다. 그것이 바로 휴식입니다.&nbsp;</p>
 
 </body>
