--- a/index.html
+++ b/index.html
@@ -46,8 +46,16 @@
     </div>
 
     <div> 
+        <h3>STUDY</h3>
+        <p>I 22.06.25 SW자산관리사</p>
+        <p> <a href="./study/study_0004.html">0004. SW라이선스 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0003.html">0003. 소프트웨어 일반 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0002.html">0002. SW백문백답 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0001.html">0001. 소프트웨어 자산관리사 개괄 (SW자산관리사)</a> </p>
+    </div>
+
+    <div> 
         <h3>BOOK</h3>
-        <p> W 06.11 책15(100~114)</p>
         <p> <a href="./book/book_0114.html">114. 나는 누구인가</a> </p>
         <p> <a href="./book/book_0113.html">113. 마음 실험실</a> </p>
         <p> <a href="./book/book_0112.html">112. 피니시 ###</a> </p>
