--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     <div> 
         <h3>STUDY</h3>
         <p>I 22.06.25 SW자산관리사</p>
+        <p> <a href="./study/study_0007.html">0007. 저작물과 저작자 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0006.html">0006. SW의 법적 보호 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0005.html">0005. 주요기업 라이선스 정책 (작성중 2/6) (SW자산관리사)</a> </p>
         <p> <a href="./study/study_0004.html">0004. SW라이선스 (SW자산관리사)</a> </p>
         <p> <a href="./study/study_0003.html">0003. 소프트웨어 일반 (SW자산관리사)</a> </p>
         <p> <a href="./study/study_0002.html">0002. SW백문백답 (SW자산관리사)</a> </p>
