--- a/index.html
+++ b/index.html
@@ -40,12 +40,6 @@
     </div>
 
     <div> 
-        <h3>12. CSS 애니메이션 만들기</h3>
-        <p>정리 필요 : 아래 링크로</p>
-        <p> <a href="./animation.html">Animaion</a> </p>
-    </div>
-
-    <div> 
         <h3>STUDY</h3>
         <p>I 22.06.25 SW자산관리사</p>
         <p> <a href="./study/study_0015.html">0015. 4.5 SAM의 적용 서식 (SW자산관리사)</a> </p>
@@ -66,9 +60,15 @@
     </div>
 
     <div> 
+        <h3>Docu</h3>
+        <p> <a href="./docu/docu_0001.html">0001. 다이어트 혁명 (EBS 다큐프라임)</a> </p>
+     </div>
+
+    <div> 
         <h3>BOOK</h3>
         <p> W 06.11 책15(100~114)</p>
-        <p> <a href="./book/book_0114.html">114. 나는 누구 인 가</a> </p>
+        <p> <a href="./book/book_0115.html">115. 아인슈타인이 들려주는 상대성원리 이야기</a> </p>
+        <p> <a href="./book/book_0114.html">114. 나는 누구 인가</a> </p>
         <p> <a href="./book/book_0113.html">113. 마음 실험실</a> </p>
         <p> <a href="./book/book_0112.html">112. 피니시 ###</a> </p>
         <p> <a href="./book/book_0111.html">111. 쫌 이상한 사람들</a> </p>
@@ -182,6 +182,12 @@
         <p> <a href="./book/book_0003.html">003. 성취심리</a> </p>
         <p> <a href="./book/book_0002.html">002. 메모의 기술</a> </p>
         <p> <a href="./book/book_0001.html">001. 칭찬은 고래를 춤추게 한다</a> </p>
+    </div>
+
+    <div> 
+        <h3>12. CSS 애니메이션 만들기</h3>
+        <p>정리 필요 : 아래 링크로</p>
+        <p> <a href="./animation.html">Animaion</a> </p>
     </div>
 
     <div> 
