--- a/docu/docu_0001.html
+++ b/docu/docu_0001.html
@@ -8,7 +8,7 @@
 <body>
     <header><h2>다이어트 혁명 (EBS 다큐프라임)</h2></header>
 
-    <p class="myclass">#EBS다큐프라임</p>
+    <p class="myclass">#EBS다큐프라임 : Markdown 준비중 테스트</p>
 
     <p>재발하는 병 / 요요현상</p>
     <p>체중감량 10% 정도 성공 --> 0.5%만 2년 동안 유지</p>
@@ -17,6 +17,7 @@
     <p>지방을 축적시키기 위해서 기초대사량을 감소시킴</p>
     <p>체중감량시 지방을 소모시켜 에너지원으로 사용 : 콜레스테롤 수치 높아짐 (2차 질환 우려)</p>
     <p>운동 : 건강하게 하는 것, 체중 감소시키는 것 아님</p>
+    <p></p>
     <p>SANE : 영양가가 높고 포만감이 오래 지속하는 음식 : </p>
     <p>칼로리가 높아서 파스타는 안돼가 아니라 더 나은 재료로 파스타 만듦</p>
     <p>탄수화물의 종류가 문제임</p>
@@ -24,6 +25,7 @@
     <p>운동의 역설 : 고강도 운동을 지속하면 처음에는 칼로리 소모가 많지만, 시간이 지나면 몸이 적응하여 적게 소모함</p>
     <p>운동과 식단 겸비</p>
     <p>자신에게 맞는 다이어트를 찾아서 평생의 라이프 스타일로 만들어야 함</p>
+    <p></p>
     <p>비만은 유전</p>
     <p>원시시대에는 살아남기 위해서 비만 유전자가 축복의 대상이었음</p>
     <p>풍요의 시대에는 저주의 유전자가 됨</p>
@@ -31,6 +33,6 @@
     <p>세트 포인트 : 몸이 기억하는 체중, 요요현상으로 체중 증가 설명, 음식의 질로 이것을 바꾸어야 함</p>
     <p>좋은 음식으로 좋은 유전자의 스위치를 켜게 해야 한다</p>
     <p>먹는 음식의 차이로 인해 장내 미생물의 차이가 발생함 : 일란성 쌍둥이 실험(체질이 다르다) </p>
-    <p>바지 포지티브</p>
+    <p>바디 포지티브</p>
 
 </body>
