--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
     <div> 
         <h3>Docu</h3>
         <p> <a href="./docu/docu_0001.html">0001. 다이어트 혁명 (EBS 다큐프라임)</a> </p>
-     </div>
+        <p> <a href="./docu/docu_0002.html">0002. 시험 (EBS 다큐프라임) (18.06.06) </a> </p>
+        <p> <a href="./docu/docu_0003.html">0003. 4차인간 (EBS 다큐프라임) (18.06.09) </a> </p>
+        <p> <a href="./docu/docu_9999.html">9999. MD to HTML (My blog) (23.01.25) </a> </p>
+    </div>
 
     <div> 
         <h3>BOOK</h3>
