--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
     </div>
 
     <div> 
+        <h3>Office</h3>
+        <p> <a href="./office/office_0001.html">0001. 엑셀</a> </p>
+    </div>
+
+    <div> 
         <h3>BOOK</h3>
         <p> W 06.11 책15(100~114)</p>
         <p> <a href="./book/book_0115.html">115. 아인슈타인이 들려주는 상대성원리 이야기</a> </p>
