--- a/docu/docu_9999.html
+++ b/docu/docu_9999.html
@@ -1,4 +1,8 @@
-﻿<p><strong>normal</strong>
+﻿<p>markdown guide
+<a href="https://www.markdownguide.org/basic-syntax/">https://www.markdownguide.org/basic-syntax/</a></p>
+<p><a href="https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one">markdwon all in one in VS Code</a> : URL 복사후 Ctrl+V 하이퍼링크 복사
+<br></p>
+<p><strong>normal</strong>
 bold
 -[x] todo</p>
 <ol>
@@ -7,14 +11,14 @@ bold
 <li>ctrl + spacebar : 자동완성 (뭐하는건지 모르겠네)</li>
 </ol>
 <h1 id="제목1">제목1</h1>
-<h2 id="제목2">제목2</h2>
+<h2 id="제목2--샵-2개">제목2 : 샵 2개</h2>
 <h3 id="제목3">제목3</h3>
 <h4 id="제목4">제목4</h4>
 <h5 id="제목5">제목5</h5>
-<h6 id="제목6">제목6</h6>
-<p><em>이태릭</em></p>
-<p><strong>볼드</strong></p>
-<p><strong><em>이태릭두껍게</em></strong></p>
+<h6 id="제목6"><em>제목6</em></h6>
+<p><em>이태릭</em> * ctrl+I</p>
+<p><strong>볼드</strong> ** ctrl+B</p>
+<p><em><strong>이태릭두껍게</strong></em> ***</p>
 <p><del>취소선</del></p>
 <p>인용문</p>
 <blockquote>
@@ -28,3 +32,7 @@ bold
 </blockquote>
 <p>원시 HTML도 가능함</p>
 <p>MD 문서 작성후 Markdown Monster를 활용하여 HTML로 변환</p>
+<br> 
+줄바꿈 : 엔터키 2번 또는 br tag
+<p>수평선 만들기 - 또는 * 또는 _를 3개 이상</p>
+<hr />
