--- a/index.html
+++ b/index.html
@@ -64,12 +64,19 @@
         <p> <a href="./docu/docu_0001.html">0001. 다이어트 혁명 (EBS 다큐프라임)</a> </p>
         <p> <a href="./docu/docu_0002.html">0002. 시험 (EBS 다큐프라임) (18.06.06) </a> </p>
         <p> <a href="./docu/docu_0003.html">0003. 4차인간 (EBS 다큐프라임) (18.06.09) </a> </p>
+        <p> <a href="./docu/docu_0004.html">0004. 4차 산업혁명시대 교육대혁명 (EBS 다큐프라임) (17.09.18) </a> </p>
+        <p> <a href="./docu/docu_0005.html">0005. 대통령은 누구인가 (EBS 다큐프라임) (17.06.29) </a> </p>
+        <p> <a href="./docu/docu_0006.html">0006. 2017 시대탐구 청년 평범하고 싶다 (EBS 다큐프라임) (17.05.01) </a> </p>
+        <p> <a href="./docu/docu_0007.html">0007. 100세 쇼크 (EBS 다큐프라임) (17.08.31) </a> </p>
+        <p> <a href="./docu/docu_0008.html">0008. 언어발달의 수수께끼 (EBS 다큐프라임) (14.03.23) </a> </p>
+        <p> <a href="./docu/docu_0009.html">0009. 거대한 균열 (2022 KBS신년특집) (22.01.10) </a> </p>
         <p> <a href="./docu/docu_9999.html">9999. MD to HTML (My blog) (23.01.25) </a> </p>
     </div>
 
     <div> 
         <h3>Office</h3>
         <p> <a href="./office/office_0001.html">0001. 엑셀</a> </p>
+        <p> <a href="./office/office_0002.html">0002. HWP</a> </p>
     </div>
 
     <div> 
