--- a/index.html
+++ b/index.html
@@ -77,8 +77,30 @@
         <h3>Office</h3>
         <p> <a href="./office/office_0001.html">0001. 엑셀</a> </p>
         <p> <a href="./office/office_0002.html">0002. HWP</a> </p>
+        <p> <a href="./office/office_0003.html">0003. 3벌식</a> </p>
+        <p> <a href="./office/office_0004.html">0004. 파워포인트</a> </p>
+        <p> <a href="./office/office_0005.html">0005. Sticky Notes</a> </p>
+        <p> <a href="./office/office_0006.html">0006. 윈도우</a> </p>
     </div>
 
+    <div> 
+        <h3>Movie</h3>
+        <p> <a href="./movie/movie_0001.html">0001. 20.12.27 찰리와 초콜릿 공장 (2005)</a> </p>
+        <p> <a href="./movie/movie_0002.html">0002. 20.12.31 베트맨 (1989)</a> </p>
+        <p> <a href="./movie/movie_0003.html">0003. 20.12.31 베트맨2 (1992)</a> </p>
+        <p> <a href="./movie/movie_0004.html">0004. 21.01.01 베트맨3 - 베트맨 포에버 (1995)</a> </p>
+        <p> <a href="./movie/movie_0005.html">0005. 21.01.04 베트맨4 - 베트맨 & 로빈 (1997)</a> </p>
+        <p> <a href="./movie/movie_0006.html">0006. 20.01.17 마녀를 잡아라 (2020)</a> </p>
+        <p> <a href="./movie/movie_0007.html">0007. 20.01.17 오 루시 (2017)</a> </p>
+        <p> <a href="./movie/movie_0008.html">0008. 20.01.30 스타 이즈 본 디 오리지널 (1954)</a> </p>
+        <p> <a href="./movie/movie_0009.html">0009. 20.01.30 어바웃 타임 (2013)</a> </p>
+        <p> <a href="./movie/movie_0010.html">0010. 20.05.21 나미야 잡화점의 기적 (2018)</a> </p>
+        <p> <a href="./movie/movie_0011.html">0011. 21.06.18 소울 (2020)</a> </p>
+        <p> <a href="./movie/movie_0012.html">0012. 21.06.18 My Girl (1991)</a> </p>
+        <p> <a href="./movie/movie_0013.html">0013. 21.10.16 신과함께 - 죄와벌 (2017)</a> </p>
+        <p> <a href="./movie/movie_0014.html">0014. 17.08.14 마션 (2015)</a> </p>
+        <p> <a href="./movie/movie_0015.html">0015. 20.01.17 마녀를 잡아라 (2020)</a> </p>
+    </div>
     <div> 
         <h3>BOOK</h3>
         <p> W 06.11 책15(100~114)</p>
