--- a/docu/docu_0004.html
+++ b/docu/docu_0004.html
@@ -31,6 +31,9 @@
 <p>5차원 수용성 교육 : 지력, 심력, 체력, 자기관리력, 인간관계력</p>
 <br>
 <h2 id="3부-대학-변해야-산다">3부. 대학, 변해야 산다</h2>
-<p>피테크 : 고교+전문학사, IBM 등 지원</p>
+<p><strong>미네르바스쿨</strong> : 온라인 상에서 교수 만남, 친밀한 상호작용 중시, 현실에서 적용 가능한 지식 중요하게 생각함, 지식전달이 아니라 특정 주제에 대한 토의, 캠퍼스는 없는데 100% 기숙사 생활, 7개 나라 순환형 기숙사 생활, 글로벌 리더 키우는</p>
+<p><strong>피테크스쿨</strong> : 고교(4년)+전문학사(2년), 히스패닉 등 소득 낮은 사람들 - IBM 등 기업 지원으로 운영(실무교육과 인터십 지원)</p>
+<p>생각의 힘을 키우는 교육이 중요</p>
 <p>수업 방식의 변경 : 사전 온라인 학습(교수 강의), 수업 시간은 방식 변경(학생들의 참여)</p>
-<p>문제제출형 ← 문제해결형</p>
+<p>KAIST : 에듀케이션 3.0 : 7% → 30% 수준으로</p>
+<p>문제제출형 ← 문제해결형  (새로운 문제를 만들어 낼 수 있어야 한다)</p>
