--- a/docu/docu_0005.html
+++ b/docu/docu_0005.html
@@ -1,11 +1,29 @@
 ﻿<h1 id="대통령은-누구인가-170629">대통령은 누구인가 (17.06.29)</h1>
-<p>신이 왕권을 부여</p>
+<h2 id="1부-미스터-프레지던트-대통령의-탄생">1부. 미스터 프레지던트, 대통령의 탄생</h2>
+<p>신이 왕권을 부여 / 세습 (대통령 나오기 전)</p>
 <p>미국 민주공화정</p>
-<p>보스턴 학살</p>
-<p>영국으로부터의 독립</p>
+<p>담배 농사의 성공으로 안정적인 생활이 이루어짐</p>
+<p>영국 총독 : 부정부패, 영국 왕 이익 우선, 세금 (식민지 확보 위한 전쟁 수행 대금)</p>
+<p>1770 보스턴 학살 (독립 6년전) : 영국군에 대한 면죄부를 줌</p>
+<p>1773 보스턴 차 사건 : 보스턴 항 막고, 무역금지</p>
+<p>1775 독립전쟁 시작 : 싸우려는 의지가 더 강했음</p>
+<p>1776 독립선언서 서명, 새로운 국가임을 선포 : 천부인권 등 혁명적인 사건이었음</p>
+<p><strong>모든 인간은 평등하게 태어났으며 창조주로부터 양도할 수 없는 권리를 부여받았다. 그 권리에는 생명과 자유와 행복의 추구가 있다.</strong></p>
+<p>영국군대의 절반 이상이 오다</p>
+<p>1781 독립전쟁의 승리</p>
+<p>독립 쟁취하고 헌법을 만들기까지 11년이나 소요됨</p>
+<p>한 사람에게 권력이 집중되는 것을 두려워 함</p>
+<p>견제와 균형의 원칙 : 3권 분립</p>
+<p>조지 워싱턴 스스로 권력을 내려놓음 (2선)</p>
+<p>WE THE PEOPLE : 국민주권</p>
+<br>
+<h2 id="2부-위-더-피플-국민의-권리">2부. 위 더 피플, 국민의 권리</h2>
+<p>대학교정에서 대통령 선거 토론 실시</p>
 <p>1년반동안의 선거운동</p>
 <p>WE THE People (우리국민) 국민주권</p>
 <p>삼권분립을 통해 견제와 균형</p>
+<p>권력은 각 주로 분산</p>
 <p>상원 : 주별 2명</p>
 <p>하원 : 435명, 인구비례</p>
 <p>대통령을 뽑을 권리는 그냥 주어진 것이 아님</p>
+<p><strong>모든 국민은 자신의 수준에 맞는 정부를 가진다</strong>  (조제프 드 메스트르, 프랑스 정치사상가)</p>
