--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <p> <a href="./movie/movie_0012.html">0012. 21.06.18 My Girl (1991)</a> </p>
         <p> <a href="./movie/movie_0013.html">0013. 21.10.16 신과함께 - 죄와벌 (2017)</a> </p>
         <p> <a href="./movie/movie_0014.html">0014. 17.08.14 마션 (2015)</a> </p>
-        <p> <a href="./movie/movie_0015.html">0015. 20.01.17 마녀를 잡아라 (2020)</a> </p>
+        <p> <a href="./movie/movie_0015.html">0015. 22.02.21 인턴 (2015)</a> </p>
     </div>
     <div> 
         <h3>BOOK</h3>
