빅데이터 10개

--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
     </div>
 
     <div> 
+        <h3>빅데이터</h3>
+        <p> <a href="./big/big_0001.html">0001. 01. 데이터의 이해</a> </p>
+        <p> <a href="./big/big_0002.html">0002. 02. 데이터 분석 기획</a> </p>
+        <p> <a href="./big/big_0003.html">0003. 03. 데이터분석개요</a> </p>
+        <p> <a href="./big/big_0004.html">0004. 04. 데이터마트</a> </p>
+        <p> <a href="./big/big_0005.html">0005. 05. 기초 통계</a> </p>
+        <p> <a href="./big/big_0006.html">0006. 06. 가설검정_확률</a> </p>
+        <p> <a href="./big/big_0007.html">0007. 07. 통계적 분석방법</a> </p>
+        <p> <a href="./big/big_0008.html">0008. 08. 분류분석</a> </p>
+        <p> <a href="./big/big_0009.html">0009. 09. 군집, 연관분석</a> </p>
+        <p> <a href="./big/big_0010.html">0010. 10. 비정형데이터마이닝</a> </p>
+    </div>
+
+    <div> 
         <h3>Movie</h3>
         <p> <a href="./movie/movie_0001.html">0001. 20.12.27 찰리와 초콜릿 공장 (2005)</a> </p>
         <p> <a href="./movie/movie_0002.html">0002. 20.12.31 베트맨 (1989)</a> </p>
