--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
     <div> 
         <h3>빅데이터</h3>
+        <h4>빅데이터 1</h4>
         <p> <a href="./big/big_0001.html">0001. 01. 데이터의 이해</a> </p>
         <p> <a href="./big/big_0002.html">0002. 02. 데이터 분석 기획</a> </p>
         <p> <a href="./big/big_0003.html">0003. 03. 데이터분석개요</a> </p>
@@ -114,6 +115,21 @@
         <p> <a href="./movie/movie_0013.html">0013. 21.10.16 신과함께 - 죄와벌 (2017)</a> </p>
         <p> <a href="./movie/movie_0014.html">0014. 17.08.14 마션 (2015)</a> </p>
         <p> <a href="./movie/movie_0015.html">0015. 22.02.21 인턴 (2015)</a> </p>
+        <p> <a href="./movie/movie_0016.html">0016. 20.10.20 날씨의 아이 (2019)</a> </p>
+        <p> <a href="./movie/movie_0017.html">0017. 22.11.09 서울역 (2016)</a> </p>
+        <p> <a href="./movie/movie_0018.html">0018. 22.11.13 알리타 (2018)</a> </p>
+        <p> <a href="./movie/movie_0019.html">0019. 22.11.14 아이, 로봇 (2004)</a> </p>        
+        <p> <a href="./movie/movie_0020.html">0020. 20.11.15 공각기동대 (1995)</a> </p>
+        <p> <a href="./movie/movie_0021.html">0021. 20.11.17 반도 (2020)</a> </p>
+        <p> <a href="./movie/movie_0022.html">0022. 20.11.11 부산행 (2016)</a> </p>
+        <p> <a href="./movie/movie_0023.html">0023. 20.12.07 카센터 (2019)</a> </p>
+        <p> <a href="./movie/movie_0024.html">0024. 20.12.07 인셉션 (2010)</a> </p>
+        <p> <a href="./movie/movie_0025.html">0025. 20.12.10 그래비티 (2013) </a> </p>
+        <p> <a href="./movie/movie_0026.html">0026. 20.12.13 레미 : 집 없는 아이 (2018)</a> </p>
+        <p> <a href="./movie/movie_0027.html">0027. 20.12.25 Her (2013)</a> </p>
+        <p> <a href="./movie/movie_0028.html">0028. 20.12.25 라라랜드 (2016)</a> </p>
+        <p> <a href="./movie/movie_0029.html">0029. 20.12.25 크리스마스 캐롤 (1951)</a> </p>        
+        <p> <a href="./movie/movie_0030.html">0030. 21.02.13 베일리 어게인 (2017)</a> </p>        
     </div>
     <div> 
         <h3>BOOK</h3>
