--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@
         <p> <a href="./big/big_0006.html">0016. 6장 팩터와 테이블</a> </p>
         <p> <a href="./big/big_0017.html">0017. 7장 R프로그래밍구조</a> </p>
         <p> <a href="./big/big_0018.html">0018. 8장 R에서 수학과 시뮬레이션하기</a> </p>
+        <h4>DoR</h4>
+        <p> <a href="./big/big_0021.html">0021. DoR 01.안녕R</a> </p>
+        <p> <a href="./big/big_0022.html">0022. DoR 04.데이터프레임</a> </p>
+        <p> <a href="./big/big_0023.html">0023. DoR 06.자유자재로 데이터 가공하기</a> </p>
+        <p> <a href="./big/big_0024.html">0024. DoR 07.데이터정제</a> </p>
+        <h4>빅데이터 2</h4>
+        <p> <a href="./big/big_0031.html">0031. 2장 T검정 및 비모수검정</a> </p>
+        <p> <a href="./big/big_0032.html">0032. 3장 게으른 학습 최근접 이웃을 사용한 분류</a> </p>
+        <p> <a href="./big/big_0033.html">0033. 4장 확률론적 학습 나이브 베이즈를 사용한 분류</a> </p>
+        <p> <a href="./big/big_0034.html">0034. 5장 분할정복 결정트리와 규칙을 사용한 분류</a> </p>
+        <p> <a href="./big/big_0035.html">0035. 10.11장 모델 성능 평가 및 향상</a> </p>
     </div>
 
     <div> 
