--- a/index.html
+++ b/index.html
@@ -41,22 +41,31 @@
 
     <div> 
         <h3>STUDY</h3>
-        <p>I 22.06.25 SW자산관리사</p>
-        <p> <a href="./study/study_0015.html">0015. 4.5 SAM의 적용 서식 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0014.html">0014. 4.4 SAM 라이프사이클 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0013.html">0013. 4.3 SAM 프로세스 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0012.html">0012. 4.2 SAM의 구현 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0011.html">0011. 4.1 소프트웨어 자산관리 일반 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0010.html">0010. 3.5 저작권의 침해와 구제 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0009.html">0009. 3.4 저작권의 제한과 공정한 이용 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0008.html">0008. 3.3 저작권의 보호와 이용 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0007.html">0007. 3.2 저작물과 저작자 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0006.html">0006. 3.1 SW의 법적 보호 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0005.html">0005. 2.X 주요기업 라이선스 정책 (작성중 2/6) (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0004.html">0004. 2. SW라이선스 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0003.html">0003. 1. 소프트웨어 일반 (SW자산관리사)</a> </p>
-        <p> <a href="./study/study_0002.html">0002. 0.1 SW백문백답 (SW자산관리사)</a> </p>
+        <H4>22.06.25 SW자산관리사</H4>
         <p> <a href="./study/study_0001.html">0001. 0.소프트웨어 자산관리사 개괄 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0002.html">0002. 0.1 SW백문백답 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0003.html">0003. 1. 소프트웨어 일반 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0004.html">0004. 2. SW라이선스 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0005.html">0005. 2.X 주요기업 라이선스 정책 (작성중 2/6) (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0006.html">0006. 3.1 SW의 법적 보호 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0007.html">0007. 3.2 저작물과 저작자 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0008.html">0008. 3.3 저작권의 보호와 이용 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0009.html">0009. 3.4 저작권의 제한과 공정한 이용 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0010.html">0010. 3.5 저작권의 침해와 구제 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0011.html">0011. 4.1 소프트웨어 자산관리 일반 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0012.html">0012. 4.2 SAM의 구현 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0013.html">0013. 4.3 SAM 프로세스 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0014.html">0014. 4.4 SAM 라이프사이클 (SW자산관리사)</a> </p>
+        <p> <a href="./study/study_0015.html">0015. 4.5 SAM의 적용 서식 (SW자산관리사)</a> </p>
+        <H4>초등수학</H4>
+        <p> <a href="./study/study_0021.html">0021. 초등수학</a> </p>
+        <p> <a href="./study/study_0022.html">0022. 1.1 수와 연산 : 분수</a> </p>
+        <p> <a href="./study/study_0023.html">0023. 1.2 수와 연산 : 소수</a> </p>
+        <p> <a href="./study/study_0024.html">0024. 1.3 수의 체계</a> </p>
+        <p> <a href="./study/study_0025.html">0025. 2. 도형</a> </p>
+        <p> <a href="./study/study_0026.html">0026. 3. 측정</a> </p>
+        <p> <a href="./study/study_0027.html">0027. 4. 규칙성</a> </p>
+        <p> <a href="./study/study_0028.html">0028. 5. 자료와 가능성</a> </p>
     </div>
 
     <div> 
@@ -81,6 +90,20 @@
         <p> <a href="./office/office_0004.html">0004. 파워포인트</a> </p>
         <p> <a href="./office/office_0005.html">0005. Sticky Notes</a> </p>
         <p> <a href="./office/office_0006.html">0006. 윈도우</a> </p>
+        <p> <a href="./office/office_0007.html">0007. 맥OS</a> </p>
+    </div>
+
+    <div> 
+        <h3>ETC</h3>
+        
+        <h4>8.경영일반학습</h4>
+        <p> <a href="./etc/etc_8001.html">8001. 리더진단</a> </p>
+        <p> <a href="./etc/etc_8002.html">8002. 필수교육</a> </p>
+        
+        <h4>9.IT학습</h4>
+        <p> <a href="./etc/etc_9001.html">9001. R함수</a> </p>
+        <p> <a href="./etc/etc_9002.html">9002. RPA세미나 (19.03.12)</a> </p>
+        <p> <a href="./etc/etc_9003.html">9003. FP</a> </p>
     </div>
 
     <div> 
