--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
     <div> 
         <h3>ETC</h3>
         
+        <h4>7.강의</h4>
+        <p> <a href="./etc/etc_7001.html">7001. 4차산업혁명 심리학으로 말하다</a> </p>
+        <p> <a href="./etc/etc_7002.html">7002. 자동화 공장 사람이 사라진 공장</a> </p>
+        <p> <a href="./etc/etc_7003.html">7003. 인공지능을 넘어 초지능으로</a> </p>
+        <p> <a href="./etc/etc_7004.html">7004. 내부회계</a> </p>
+        <p> <a href="./etc/etc_7005.html">7005. 처음 시작하는 데이터분석, 엑셀</a> </p>
+        <p> <a href="./etc/etc_7006.html">7006. 디지털 리터러시</a> </p>
+        
         <h4>8.경영일반학습</h4>
         <p> <a href="./etc/etc_8001.html">8001. 리더진단</a> </p>
         <p> <a href="./etc/etc_8002.html">8002. 필수교육</a> </p>
