--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     </header>
 
     <div> 
+        <h3>MY</h3>
+        <p> <a href="./my/my_0100.html">0100. 금융 사이트</a> </p>
+        <p> <a href="./my/my_0110.html">0110. 금융</a> </p>
+        <p> <a href="./my/my_0120.html">0120. 부동산</a> </p>
+        <p> <a href="./my/my_0200.html">0200. 노래</a> </p>
+        
+    </div>
+
+
+    <div> 
         <h3>99. 하다보니</h3>
         <p> body:flex를 사용하여 아래쪽 div 정렬중 </p>
         <p> header 고정 <span class="sk_r">(fixed)</span>, div를 <span class="sk_r">relative</span> header 높이</p>
@@ -66,6 +76,16 @@
         <p> <a href="./study/study_0026.html">0026. 3. 측정</a> </p>
         <p> <a href="./study/study_0027.html">0027. 4. 규칙성</a> </p>
         <p> <a href="./study/study_0028.html">0028. 5. 자료와 가능성</a> </p>
+        <H4>HTML/CSS</H4>
+        <p> <a href="./study/study_0031.html">0031. hello world</a> </p>
+        <p> <a href="./study/study_0032.html">0032. 기초문법 (h, a, img, ul, ol, li)</a> </p>
+        <p> <a href="./study/study_0033.html">0033. 구조</a> </p>
+        <p> <a href="./study/study_0034.html">0034. css</a> </p>
+        <p> <a href="./study/study_0035.html">0035. 선택자</a> </p>
+        <p> <a href="./study/study_0036.html">0036. css 상속</a> </p>
+        <p> <a href="./study/study_0037.html">0037. css 우선순위</a> </p>
+        <p> <a href="./study/study_0038.html">0038. css 주요속성</a> </p>
+
     </div>
 
     <div> 
@@ -79,6 +99,8 @@
         <p> <a href="./docu/docu_0007.html">0007. 100세 쇼크 (EBS 다큐프라임) (17.08.31) </a> </p>
         <p> <a href="./docu/docu_0008.html">0008. 언어발달의 수수께끼 (EBS 다큐프라임) (14.03.23) </a> </p>
         <p> <a href="./docu/docu_0009.html">0009. 거대한 균열 (2022 KBS신년특집) (22.01.10) </a> </p>
+        <p> <a href="./docu/docu_0010.html">0010. 차이나는 클라스(136-139) </a> </p>
+        
         <p> <a href="./docu/docu_9999.html">9999. MD to HTML (My blog) (23.01.25) </a> </p>
     </div>
 
