--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
         
     </div>
 
+    <div> 
+        <h3>News</h3>
+        <p> <a href="./news/news_0001.html">0001. 자바전쟁</a> </p>
+        <p> <a href="./news/news_0002.html">0002. AI와 암묵지</a> </p>
+        <p> <a href="./news/news_0003.html">0003. 코털</a> </p>
+        <p> <a href="./news/news_0004.html">0004. 짐로저스</a> </p>
+        <p> <a href="./news/news_0005.html">0005. 하버드생 달력</a> </p>
+        <p> <a href="./news/news_0006.html">0006. 인도인구</a> </p>
+        <p> <a href="./news/news_0007.html">0007. </a> </p>
+        <p> <a href="./news/news_0008.html">0008. </a> </p>
+        <p> <a href="./news/news_0009.html">0009. </a> </p>
+        <p> <a href="./news/news_0010.html">0010. </a> </p>
+        
+    </div>
+
 
     <div> 
         <h3>99. 하다보니</h3>
