--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <p> <a href="./my/my_0110.html">0110. 금융</a> </p>
         <p> <a href="./my/my_0120.html">0120. 부동산</a> </p>
         <p> <a href="./my/my_0200.html">0200. 노래</a> </p>
+        <p> <a href="./my/my_0300.html">0300. 10분 요리</a> </p>
+        <p> <a href="./my/my_0400.html">0400. MY BLOG</a> </p>
         
     </div>
 
@@ -27,9 +29,9 @@
         <p> <a href="./news/news_0004.html">0004. 짐로저스</a> </p>
         <p> <a href="./news/news_0005.html">0005. 하버드생 달력</a> </p>
         <p> <a href="./news/news_0006.html">0006. 인도인구</a> </p>
-        <p> <a href="./news/news_0007.html">0007. </a> </p>
-        <p> <a href="./news/news_0008.html">0008. </a> </p>
-        <p> <a href="./news/news_0009.html">0009. </a> </p>
+        <p> <a href="./news/news_0007.html">0007. 저물가종료</a> </p>
+        <p> <a href="./news/news_0008.html">0008. 셧다운제</a> </p>
+        <p> <a href="./news/news_0009.html">0009. 그린플레이션</a> </p>
         <p> <a href="./news/news_0010.html">0010. </a> </p>
         
     </div>
