--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
     <div> 
         <h3>MY</h3>
-        <p> <a href="./my/my_0100.html">0100. 금융 사이트</a> </p>
+        <p> <a href="./my/my_0100.html">0100. MY 금융</a> </p>
         <p> <a href="./my/my_0110.html">0110. 금융</a> </p>
         <p> <a href="./my/my_0120.html">0120. 부동산</a> </p>
         <p> <a href="./my/my_0200.html">0200. 노래</a> </p>
         <p> <a href="./my/my_0300.html">0300. 10분 요리</a> </p>
         <p> <a href="./my/my_0400.html">0400. MY BLOG</a> </p>
+        <p> <a href="./my/my_0500.html">0500. 국어사전</a> </p>
         
     </div>
 
@@ -32,7 +33,8 @@
         <p> <a href="./news/news_0007.html">0007. 저물가종료</a> </p>
         <p> <a href="./news/news_0008.html">0008. 셧다운제</a> </p>
         <p> <a href="./news/news_0009.html">0009. 그린플레이션</a> </p>
-        <p> <a href="./news/news_0010.html">0010. </a> </p>
+        <p> <a href="./news/news_0010.html">0010. 등대공장</a> </p>
+        <p> <a href="./news/news_0011.html">0011. 자산거품</a> </p>
         
     </div>
 
