--- a/my/my_0400.html
+++ b/my/my_0400.html
@@ -61,12 +61,20 @@
 <hr>
 <br>
 <ol>
-<li>
-<p>md 파일을 html로 자동변환</p>
-<p>VSC에서 옵션 설정 : &quot;Markdown &gt; Extension &gt; Print: On File Save&quot;</p>
-</li>
+<li>md 파일을 html로 자동변환</li>
 </ol>
-<p><img src="file:///d:\MY\new2\new2\my\img\m0400_1.GIF" alt="변환이미지"></p>
+<blockquote>
+<p>VSC에서 옵션 설정 : &quot;Markdown &gt; Extension &gt; Print: On File Save&quot;</p>
+</blockquote>
+<p><img src="file:///d:\MY\new2\new2\my\img\m0400_2.JPG" alt="변환이미지"></p>
+<br>
+<ol start="2">
+<li>상대주소로 파일 저장</li>
+</ol>
+<blockquote>
+<p>VSC에서 옵션 설정 : &quot;Markdown &gt; Extension &gt; Print: On File Save&quot;</p>
+</blockquote>
+<p><img src="file:///d:\MY\new2\new2\my\img\m0400_1.JPG" alt="변환이미지"></p>
 <br>
 <ol>
 <li>기타등등 정리중</li>
