--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
         <p> <a href="./study/study_0037.html">0037. css 우선순위</a> </p>
         <p> <a href="./study/study_0038.html">0038. css 주요속성</a> </p>
 
+        <H4>DB</H4>
+        <p> <a href="./study/study_0051.html">0051. hello world</a> </p>
+
     </div>
 
     <div> 
