--- a/index.html
+++ b/index.html
@@ -104,9 +104,20 @@
         <p> <a href="./study/study_0036.html">0036. css 상속</a> </p>
         <p> <a href="./study/study_0037.html">0037. css 우선순위</a> </p>
         <p> <a href="./study/study_0038.html">0038. css 주요속성</a> </p>
+        <H4>R restart 2019</H4>
+        <p> <a href="./study/study_0061.html">0061. R 리스타트</a> </p>
+        <p> <a href="./study/study_0062.html">0062. R 마크다운출력</a> </p>
+        <p> <a href="./study/study_0063.html">0063. 일정관리1</a> </p>
+        <p> <a href="./study/study_0064.html">0064. 일정관리2</a> </p>
+        <p> <a href="./study/study_0065.html">0065. igraph in R</a> </p>
+        <p> <a href="./study/study_0066.html">0066. R Markdown my graph</a> </p>
 
-        <H4>DB</H4>
-        <p> <a href="./study/study_0051.html">0051. hello world</a> </p>
+        <H4>개발</H4>
+        <p> <a href="./study/study_0051.html">0051. DB</a> </p>
+        <p> <a href="./study/study_0052.html">0052. VSC</a> </p>
+
+        <H4>파이썬</H4>
+        <p> <a href="./study/study_0071.html">0071. 파이썬</a> </p>
 
     </div>
 
@@ -123,7 +134,6 @@
         <p> <a href="./docu/docu_0009.html">0009. 거대한 균열 (2022 KBS신년특집) (22.01.10) </a> </p>
         <p> <a href="./docu/docu_0010.html">0010. 차이나는 클라스(136-139) </a> </p>
         
-        <p> <a href="./docu/docu_9999.html">9999. MD to HTML (My blog) (23.01.25) </a> </p>
     </div>
 
     <div> 
@@ -225,6 +235,7 @@
         <p> <a href="./movie/movie_0028.html">0028. 20.12.25 라라랜드 (2016)</a> </p>
         <p> <a href="./movie/movie_0029.html">0029. 20.12.25 크리스마스 캐롤 (1951)</a> </p>        
         <p> <a href="./movie/movie_0030.html">0030. 21.02.13 베일리 어게인 (2017)</a> </p>        
+        <p> <a href="./movie/movie_0031.html">0031. 20.10.23 이상한 나라의 앨리스 (2010), 거울나라 (2016)</a> </p>        
     </div>
     <div> 
         <h3>BOOK</h3>
