--- a/my/my_0400.html
+++ b/my/my_0400.html
@@ -61,20 +61,18 @@
 <hr>
 <br>
 <ol>
-<li>md 파일을 html로 자동변환</li>
-</ol>
-<blockquote>
-<p>VSC에서 옵션 설정 : &quot;Markdown &gt; Extension &gt; Print: On File Save&quot;</p>
-</blockquote>
-<p><img src="file:///d:\MY\new2\new2\my\img\m0400_2.JPG" alt="변환이미지"></p>
-<br>
-<ol start="2">
 <li>상대주소로 파일 저장</li>
 </ol>
 <blockquote>
-<p>VSC에서 옵션 설정 : &quot;Markdown &gt; Extension &gt; Print: On File Save&quot;</p>
+<p>VSC에서 옵션 설정 : &quot;Markdown &gt; Extension &gt; Print: <strong>Absolute Img Path</strong>&quot;</p>
 </blockquote>
-<p><img src="file:///d:\MY\new2\new2\my\img\m0400_1.JPG" alt="변환이미지"></p>
+<ol start="2">
+<li>md 파일을 html로 자동변환</li>
+</ol>
+<blockquote>
+<p>VSC에서 옵션 설정 : &quot;Markdown &gt; Extension &gt; Print: <strong>On File Save</strong>&quot;</p>
+</blockquote>
+<p><img src="./img/m0400_1.JPG" alt="변환이미지"></p>
 <br>
 <ol>
 <li>기타등등 정리중</li>
