--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
     <div> 
-        <h3>99. 하다보니</h3>
+        <h3>98. 하다보니</h3>
         <p> body:flex를 사용하여 아래쪽 div 정렬중 </p>
         <p> header 고정 <span class="sk_r">(fixed)</span>, div를 <span class="sk_r">relative</span> header 높이</p>
         <p> z-index의 조정으로 div 스크롤시 밑으로 지나가도록 설정</p>
@@ -65,6 +65,9 @@
         <p> <a href="https://www.w3schools.com/css/">W3School : css</a> </p>
         <p> <a href="https://www.w3schools.com/js/">W3School : java Acript</a> </p>
         https://www.w3schools.com/html/
+        <br><br>
+
+        <p> <a href="https://www.frontendinterviewhandbook.com/kr/html-questions/">Front End Interview Handbook : HTML</a> </p>
         <br>
 
 
@@ -112,8 +115,8 @@
         <p> <a href="./study/study_0042.html">0042. Animation rotation</a> </p>
         <p> <a href="./study/study_0043.html">0043. 3-5</a> </p>
         <p> <a href="./study/study_0044.html">0044. 3-6</a> </p>
-        <p> <a href="./study/study_0045.html">0045. Animation changeWidth</a> </p>
-        <p> <a href="./study/study_0046.html">0046. Animation rotation</a> </p>
+        <p> <a href="./study/study_0045.html">0045. 미디어쿼리</a> </p>
+        <p> <a href="./study/study_0046.html">0046. 뷰포트</a> </p>
         
         <H4>R restart 2019</H4>
         <p> <a href="./study/study_0061.html">0061. R 리스타트</a> </p>
