--- a/study/study_0052.html
+++ b/study/study_0052.html
@@ -44,7 +44,60 @@
 <h2 id="1-컬럼단위-글쓰기">1. 컬럼단위 글쓰기</h2>
 <p>Ctrl + Alt + 화살표 위 또는 아래</p>
 <br>
-<h2 id="2">2.</h2>
+<h2 id="2-다운로드--설치">2. 다운로드 &amp; 설치</h2>
+<p><a href="https://code.visualstudio.com/Download">설치 URL</a></p>
+<br>
+<h2 id="3-마켓플레이스에서-중요한-것들-설치">3. 마켓플레이스에서 중요한 것들 설치</h2>
+<pre><code>한글설치 : Korean Languange Pack for Visual Studio Code
+브라우저 : open in browser
+마크다운 : Markdown All in One
+
+추천 5종 팩
+. Auto Close Tag : 태그 자동 입력 (&lt;&gt;, &lt;/&gt;)
+. HTML Snipper : &lt;&gt; 없어도 태그 완성 : 꺽쇠 없이 div 후 엔터키
+. Live Server : 자동 저장 기능
+. Material Icon Theme : 언어별 아이콘 부여
+. Prettier : 코드 배치 이쁘게
+</code></pre>
+<p><img src="img/s0052.jpg" alt="마켓플레이스"></p>
+<h3 id="31-korean-languange-pack-for-visual-studio-code">3.1 Korean Languange Pack for Visual Studio Code</h3>
+<ul>
+<li>메뉴를 한글로 표시함</li>
+</ul>
+<h3 id="32-open-in-browser">3.2 open in browser</h3>
+<ul>
+<li>Alt + B : html 내역을 브라우저에서 오픈</li>
+</ul>
+<h3 id="33-markdown-all-in-one">3.3 Markdown All in One</h3>
+<br>
+<h2 id="3-화면-설명">3. 화면 설명</h2>
+<pre><code>탐색기
+검색
+소스제어(Git)
+실행 및 디버그
+확장 (마켓플레이스)
+</code></pre>
+<br>
+<h2 id="4-소스관리--git">4. 소스관리 / Git</h2>
+<p><img src="img/s0052_1.png" alt="소스관리"></p>
+<ol>
+<li>
+<p>Refresh : 소스제어에서 어떤 것들이 바뀌었는지 확인</p>
+</li>
+<li>
+<p>필요한 파일 Staging Area로 이동</p>
+</li>
+<li>
+<p>커밋 메시지 작성</p>
+</li>
+<li>
+<p>커밋 : 전후 파일 내역이 동일해짐</p>
+</li>
+</ol>
+<br>
+<h2 id="5-색테마">5. 색테마</h2>
+<p>파일 - 기본설정 - 색테마</p>
+<p><img src="img/s0052_2.png" alt="색테마"></p>
 
         
         
