--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
         <H4>파이썬</H4>
         <p> <a href="./study/study_0071.html">0071. 파이썬</a> </p>
 
+        <H4>Github</H4>
+        <p> <a href="./study/study_0081.html">0081. Github</a> </p>
+
     </div>
 
     <div> 
